tests/fail/increment-type.virtue
a = "one"
a++
a--

# error: type error
#  --> test.virtue:2:1
#    |
#  2 | a++
#    | ^ expected i64, found string
#
# error: type error
#  --> test.virtue:3:1
#    |
#  3 | a--
#    | ^ expected i64, found string
#
